<resources>

    <string name="locale" translatable="false">tr</string>
    <string name="app_name">CoinTicker</string>
    <string name="favScreenTitle">Favoriler</string>
    <string name="coinScreenTitle">Coinler</string>
    <string name="lowestTxt">En düşük (24h)   ➩</string>
    <string name="highestTxt">En yüksek (24h)  ➩</string>
    <string name="descriptionTxt">Tanım</string>
    <string name="searchHint">Bir şeyler ara</string>

    <string name="name">Ad</string>
    <string name="emailHint"> Eposta</string>
    <string name="passwordHint"> Şifre</string>
    <string name="loginBtn">GİRİŞ YAP</string>
    <string name="loginTxt">Giriş Yap</string>
    <string name="dontHave">Hesabınız yok mu?</string>
    <string name="signUptxt">Üye Ol</string>
    <string name="signUpBtn">ÜYE OL</string>
    <string name="powered">CoinGecko API </string>
    <string name="coingecko">tarafından desteklenmektedir.</string>
    <string name="alreadyHave">Zaten hesabınız var mı?</string>
    <string name="priceChange24hText">%1$s $</string>
    <string name="precentage24hText">%% %.1f</string>
    <string name="h24h">%1$s $ </string>
    <string name="lastupdate">%1$s/%2$s/%3$s,  %4$s:%5$s:%6$s</string>
    <string name="settingsname">Kullanıcı adınız ya da anahtarınız değildir. Size daha iyi bir deneyim sunmak için kullanılacaktır.</string>
    <string name="settingspassword">Şifrenizi güvenliğiniz için kimse ile paylaşmayınız.</string>
    <string name="profile">Profil</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="info">Yardım</string>
    <string name="infoDescription">Yardım merkezi, bize ulaşın, hakkımızda, gizlilik politikası</string>
    <string name="helpCenter">Yardım Merkezi</string>
    <string name="helpCentertxt">Yardım al, Bize Ulaş</string>
    <string name="privacyPolicy">Kullanım koşulları ve Gizlilik Politikası</string>
    <string name="howCanWeHelp">Nasıl yardımcı olabiliriz?</string>
    <string name="howcanwehelpTxt">Yaşadığınız sorunu belirtin</string>
    <string name="callbackMail">Sorunun çözümü için e-posta adresiniz</string>
    <string name="send">Sorunu Bildir</string>
    <string name="mailTitle">Coin Ticker : %1$s için destek </string>


    <!--    alerDialog-->

    <string name="areYouSure">Emin misiniz?</string>
    <string name="logoutbtn">Oturumu kapat</string>
    <string name="no">Vazgeç</string>

    <string name="enterYourName">Adınızı girin</string>
    <string name="save">Kaydet</string>
    <string name="cancel">Vazgeç</string>
    <string name="continuee">Devam Et</string>
    <string name="infoVerify">Bilgilerinizi Onaylayın</string>
    <string name="enterNewPassword">Yeni şifrenizi girin</string>
    <string name="newPassword">Yeni şifre</string>
    <string name="newPasswordConfirm">Yeni şifre onayı</string>


    <!--    toast-->

    <string name="addFavSuccess">Favorilere başarıyla eklendi</string>
    <string name="delFavSuccess">Favorilerden başarıyla silindi</string>
    <string name="getPhotoFail">Bir şeyler yanlış gitti. Profil fotoğrafı alınamadı.</string>
    <!--    login-->
    <string name="failmsg1">Kullanıcı bulunamadı veya hesap etkin değil.</string>
    <string name="failmsg2">Kullanıcı adı veya şifre hatalı.</string>
    <string name="failmsg3">İnternet bağlantı hatası. Sunucuya erişilemiyor.</string>
    <!--    register-->
    <string name="succesmsg1">Hesap oluşturma başarılı.</string>
    <string name="failmsg5">Daha güçlü bir şifre seçin.</string>
    <string name="failmsg6">Geçersiz e-posta adresi veya şifre.</string>
    <string name="failmsg7">Bu e-posta adresiyle kayıtlı bir hesap zaten var.</string>
    <string name="failmsg8">İnternet bağlantısı yok veya sunucuya erişilemiyor.</string>
    <string name="notmatch">Yeni şifre ve şifre onayı birbirine uymuyor.</string>
    <string name="profileChangeError">Profil fotoğrafı değiştirme işlemi başarısız.</string>
    <string name="profileChangeSucces">Profil fotoğrafı başarıyla değiştirildi.</string>
    <string name="logOutSuccess">Oturum kapatıldı.</string>
    <string name="welcome">Hoşgeldiniz, %1$s</string>
    <string name="settings">Ayarlar</string>

    <string name="deleteAccount">Hesabı sil</string>
    <string name="deleteThisAccount">Bu hesabı sil</string>
    <string name="ifYouDelete">Eğer bu hesabı silmek istiyorsan:</string>
    <string name="ifYouDeleteMsg1">• Hesap Coin Ticker\'dan tamamen silinecek.</string>
    <string name="ifYouDeleteMsg2">• Favoriler, profil bilgileri gibi kişisel verileriniz silinecek.</string>
    <string name="insteadText">Bunun yerine çıkış yapılsın mı ?</string>
    <string name="ifYouDeleteConfirm_e_mail">Hesabınızı silmek için eposta adresinizi ve şifrenizi girin.</string>
    <string name="ifYouDeleteConfirm_e_mail_txt">Bu işlem geri alınamaz.</string>

    <string name="infoNotVerify">Bilgilerinizi doğrulayamadık. Lütfen tekrar giriş yapın.</string>
    <string name="infoVerifySuccess">Kimlik doğrulama başarılı.</string>
    <string name="passwordChangeError">Şifre değiştirme işlemi başarısız. Daha sonra tekrar deneyin.</string>
    <string name="passwordChangeSuccess">Şifre başarıyla değiştirildi. Lütfen tekrar giriş yapın</string>

    <string name="deleteFavSuccess">Favoriler silindi.</string>
    <string name="deleteFavError">Favorilerden silme işlemi başarısız ya da favori yok.</string>
    <string name="deletePhotoSuccess">Profil fotorafı silindi.</string>
    <string name="deletePhotoError">Profil fotoğrafı silinemedi. Lütfen bizimle iletişime geçin.</string>

    <string name="deleteAccount_data">Hesap ve kişisel veriler başarıyla silindi</string>
    <string name="deleteAccount_dataError">Hesap ve/veya veriler silinemedi. Lütfen bizimle iletişime geçin.</string>
    <string name="loadUserImageError">Bir şeyler yanlış gitti. Profil fotoğrafı alınamadı.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>